fix for multi choice answers not showing, footer not positioned correctly, format sign in page

--- a/app/assets/stylesheets/dashboard/cm_sign_in.sass
+++ b/app/assets/stylesheets/dashboard/cm_sign_in.sass
@@ -2,3 +2,4 @@
   min-height: 160px
 #continue
   text-align: center
+  padding: 50px 0px
