--- a/app/assets/stylesheets/questions/qpage.sass
+++ b/app/assets/stylesheets/questions/qpage.sass
@@ -185,7 +185,7 @@
     .choice
       padding: 0px 20px
       label
-        display: block
+        display: block !important
         font-weight: normal
         width: auto !important
         padding-right: 0px !important
